# ext.CCFD_mining

./: .gitignore  CFDMiner  CMakeLists.txt  FGC_Stream_CFDMiner  Makefile  compare_ccfd.ipynb  compare_ccfd.py  main_CFDMiner.cpp  main_graph.cpp  main_graph_probability.cpp  readme.md  xlsx2csv.py
FGC-Stream/: FGC-Stream.cpp  FGC-Stream.h  Transaction.h  main.cpp
algorithms/: ccfd.h  ccfd_graph.h  ccfd_node.h  clogenmerger.cpp  clogenmerger.h  clogenminer.cpp  clogenminer.h  clomapentry.h
benchmarks/: .gitignore  fetch.py  generate.py  mine.py  plot.py  requirements.txt
benchmarks/Adult/ret; graph, support=0.005/: CFDMiner_Graph_ccfd.txt  performance.json  performance.txt
benchmarks/Adult/ret; graph, support=0.01/: CFDMiner_Graph_ccfd.txt  performance.json  performance.txt
benchmarks/Adult/ret; graph, support=0.01, window=1000/: CFDMiner_Graph_ccfd.txt  performance.json
benchmarks/Adult/ret; graph, support=0.01, window=10000/: CFDMiner_Graph_ccfd.txt  performance.json
benchmarks/Adult/ret; graph, support=0.01, window=2000/: CFDMiner_Graph_ccfd.txt  performance.json
benchmarks/Adult/ret; graph, support=0.01, window=5000/: CFDMiner_Graph_ccfd.txt  performance.json
benchmarks/Adult/ret; graph, support=0.05, window=1000/: CFDMiner_Graph_ccfd.txt  performance.json
benchmarks/Adult/ret; graph, support=0.05, window=10000/: CFDMiner_Graph_ccfd.txt  performance.json
benchmarks/Adult/ret; graph, support=0.05, window=2000/: CFDMiner_Graph_ccfd.txt  performance.json
data/: tabulardatabase.cpp
util/: hashstorer.h
(+734 files in other folders)
